--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -17,6 +17,7 @@
         <meta name="title" content="$title$">
         <link rel="stylesheet" href="/css/blog_main.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/solarized-dark.min.css">
+        $if(MathJax)$$MathJax$$endif$
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     </head>
     <body>
