--- a/Foundation/scss/_settings_override.scss
+++ b/Foundation/scss/_settings_override.scss
@@ -273,6 +273,22 @@ $code-border: none; //1px solid $medium-gray;
 // 50. Table
 // ---------
 
+$table-background: $body-background;
+$table-color-scale: 2%;
+$table-border: 1px solid smart-scale($table-background, $table-color-scale);
+
+$table-hover-scale: 2%;
+$table-row-hover: darken($table-background, $table-hover-scale);
+$table-row-stripe-hover: darken($table-background, $table-color-scale + $table-hover-scale);
+$table-is-striped: true;
+$table-striped-background: smart-scale($table-background, $table-color-scale);
+$table-stripe: even;
+$table-head-background: smart-scale($table-background, $table-color-scale / 2);
+$table-head-row-hover: darken($table-head-background, $table-hover-scale);
+$table-foot-background: smart-scale($table-background, $table-color-scale);
+$table-foot-row-hover: darken($table-foot-background, $table-hover-scale);
+$show-header-for-stacked: false;
+
 
 // 51. Tabs
 // --------
